--- a/src/main.css
+++ b/src/main.css
@@ -5,10 +5,12 @@ html{
   font-weight: 400;
   font-style: normal;
   height: 100vh;
-  width: 100wh;
+  width: 100vw;
 }
 
 body{
+  padding: 0;
+  margin: 0;
   height: 100vh;
   width: 100vw;
 }
