--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-html{
+html {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -8,8 +8,8 @@ html{
   width: 100wh;
 }
 
-body{
+body {
+  margin: 0;
   height: 100vh;
   width: 100vw;
 }
-
