--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
 .headerContainer{
     display: flex;
     justify-content: center;
-    background-color: #a7f3d0;
+    background-color: #7ccca7;
     height: 15vh;
     padding:0 ;
     border: 1px solid;
