--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -8,7 +8,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #a7f3d0;
+  background-color: #d1fae5;
 }
 
 .loginContainer {
