--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,30 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-.headerContainer{
-    display: flex;
-    justify-content: center;
-    background-color: #7ccca7;
-    height: 15vh;
-    padding:0 ;
-    border: 1px solid;
-    border-radius: 3px;
+.headerContainer {
+  display: flex;
+  justify-content: center;
+  color: #ecfdf5;
+  background-color: #022c22;
+  height: 15vh;
+  padding: 0;
+}
+
+.svg {
+  -webkit-filter: invert(100%);
+  /* safari 6.0 - 9.0 */
+  filter: invert(100%);
 }
 
 
-.logo{
-    display: flex;
-    align-items: center;
+.logo {
+  display: flex;
+  align-items: center;
 }
 
 
-.logo > img {
-    height: 80px;
-    width: auto;
+.logo>img {
+  height: 80px;
+  width: auto;
 }
 
-.logo > h1{
-    font-size: 30px;
-    font-family: "Pacifico", cursive;
-    font-weight: 400;
-    font-style: normal;
+.logo>h1 {
+  font-size: 30px;
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
